# task_1

./: README.md  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
file_manager/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
file_manager/migrations/: 0001_initial.py
